--- a/form.jade
+++ b/form.jade
@@ -13,3 +13,4 @@ html(lang="jp")
       input(type="radio", name="favorite", value="#{secondItem}")
       span #{secondItem} 
       button(type="submit") 投稿
+      input(type="reset", value="取消")
