ログに日付が重複しないように変更

--- a/form.jade
+++ b/form.jade
@@ -12,4 +12,6 @@ html(lang="jp")
       span #{firstItem} 
       input(type="radio", name="favorite", value="#{secondItem}")
       span #{secondItem} 
+      input(type="radio", name="favorite", value="吉村先生")
+      span 吉村先生 
       button(type="submit") 投稿
