--- a/form.jade
+++ b/form.jade
@@ -3,13 +3,17 @@ html(lang="jp")
   head
     meta(charset="UTF-8")
     title アンケート
+    style.
+      body{
+        font-family: -apple-system, blinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+      }
   body
     h1 どちらが食べたいですか？
     form(method="post", action="#{path}")
-      span 名前: 
+      span 名前:
       input(type="text", name="name")
       input(type="radio", name="favorite", value="#{firstItem}")
-      span #{firstItem} 
+      span #{firstItem}
       input(type="radio", name="favorite", value="#{secondItem}")
-      span #{secondItem} 
+      span #{secondItem}
       button(type="submit") 投稿
