--- a/form.jade
+++ b/form.jade
@@ -6,6 +6,7 @@ html(lang="ja")
     style.
       body{
         font-family: -apple-system, blinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+        font-size: 1.2em;
       }
   body
     h1 どちらが食べたいですか？
