--- a/form.pug
+++ b/form.pug
@@ -4,6 +4,7 @@ html(lang="jp")
     meta(charset="UTF-8")
     title アンケート
   body
+    h1 よりしお
     h1 どちらが食べたいですか？
     form(method="post", action=path)
       span 名前: 
@@ -12,4 +13,5 @@ html(lang="jp")
       span #{firstItem} 
       input(type="radio", name="favorite", value=secondItem)
       span #{secondItem} 
+        br
       button(type="submit") 投稿
