--- a/form.pug
+++ b/form.pug
@@ -2,11 +2,11 @@ doctype html
 html(lang="jp")
   head
     meta(charset="UTF-8")
-    title アンケート
+    title 食べたいものアンケート
   body
     h1 どちらが食べたいですか？
     form(method="post", action=path)
-      span 名前: 
+      span 名前:       
       input(type="text", name="name")
       input(type="radio", name="favorite", value=firstItem)
       span #{firstItem} 
