Herokuで起動できるように変更

--- a/form.pug
+++ b/form.pug
@@ -4,7 +4,7 @@ html(lang="jp")
     meta(charset="UTF-8")
     title アンケート
   body
-    h1 どちらが食べたいですか？
+    h1 🍜🍚🍕 どちらが食べたいですか？ 🌮🥯🥯
     form(method="post", action=path)
       span 名前: 
       input(type="text", name="name")
@@ -12,4 +12,4 @@ html(lang="jp")
       span #{firstItem} 
       input(type="radio", name="favorite", value=secondItem)
       span #{secondItem} 
-      button(type="submit") 投稿
+      button(type="submit") 投稿 ✔
